After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 783475 - gtk-doc comment lists too few arguments for GdlDockObject::dock
gtk-doc comment lists too few arguments for GdlDockObject::dock
Status: RESOLVED FIXED
Product: gdl
Classification: Other
Component: general
CVS HEAD
Other FreeBSD
: Normal normal
: ---
Assigned To: Anjuta maintainers
Anjuta maintainers
Depends on:
Blocks:
 
 
Reported: 2017-06-06 13:42 UTC by Ting-Wei Lan
Modified: 2017-06-06 19:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
dock-object: fix gtk-doc comment for dock signal (805 bytes, patch)
2017-06-06 13:43 UTC, Ting-Wei Lan
committed Details | Review

Description Ting-Wei Lan 2017-06-06 13:42:16 UTC
This error causes incorrect names to be assigned to function arguments when using the old perl-based gtkdoc-mkdb, and it causes the new python-based gtkdoc-mkdb to crash with following messages:

gmake[3]: Entering directory '/home/lantw44/gnome/build/gdl/docs/reference'
  DOC   Building XML
unknown:0: warning: Field descriptions for struct GdlDockItemClass are missing in source code comment block.
Traceback (most recent call last):
  • File "/home/lantw44/gnome/devinstall/bin/gtkdoc-mkdb", line 63 in <module>
    mkdb.Run(options)
  • File "/home/lantw44/gnome/devinstall/share/gtk-doc/python/gtkdoc/mkdb.py", line 284 in Run
    changed, book_top, book_bottom = OutputDB(os.path.join(ROOT_DIR, MODULE + "-sections.txt"), options)
  • File "/home/lantw44/gnome/devinstall/share/gtk-doc/python/gtkdoc/mkdb.py", line 727 in OutputDB
    sig_synop, sig_desc = GetSignals(symbol)
  • File "/home/lantw44/gnome/devinstall/share/gtk-doc/python/gtkdoc/mkdb.py", line 3328 in GetSignals
    param_name = list(sourceparams)[j]   # keys as list
IndexError: list index out of range
gmake[3]: *** [Makefile:743: sgml-build.stamp] Error 1
Comment 1 Ting-Wei Lan 2017-06-06 13:43:59 UTC
Created attachment 353259 [details] [review]
dock-object: fix gtk-doc comment for dock signal
Comment 2 Sébastien Granjoux 2017-06-06 19:52:28 UTC
Review of attachment 353259 [details] [review]:

Thank you for your patch. I have just committed it in the master branch.