dock-object: fix gtk-doc comment for dock signal

https://bugzilla.gnome.org/show_bug.cgi?id=783475